# timberjack

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  test_command.sh
.github/: CHANGELOG.md  CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  codeql-analysis.yml  rust.yml
benches/: large_logs.rs  simd_benchmarks.rs
benchmark/: analyze_results.py  compare_modes.sh  create_json_logs.py  generate_report_only.sh  run_benchmarks.sh
benchmark_data/: generate_charts.py
docs/: CLI.md  PERFORMANCE.md  ROADMAP.md  json-log-analysis.md
src/: accelerated.rs  analyzer.rs  cli.rs  formatter.rs  lib.rs  main.rs
src/parser/: generic.rs  json.rs  mod.rs
tests/: analyzer_tests.rs  cli_tests.rs  edge_cases.rs  error_tests.rs  field_filter_tests.rs  formatter_tests.rs  json_cli_tests.rs  json_output_tests.rs  json_parser_tests.rs  parallel_tests.rs  parser_tests.rs  sample_logs_tests.rs  stdin_tests.rs
tests/test_logs/: json_log.json
