[package]
name = "timber-rs"
version = "0.1.0-alpha.2"
edition = "2024"
description = "A CLI tool that fells log files with speed and insight"
license = "MIT"
authors = ["Donald Calhoun donaldcalhouncs@gmail.com"]
repository = "https://github.com/donaldc24/timber"
homepage = "https://github.com/donaldc24/timber"
readme = "README.md"
keywords = ["log", "analysis", "cli", "logging"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "timber"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.3"
criterion = "0.5"

[[bench]]
name = "large_logs"
harness = false